<resources>
    <string name="app_name">DoctorApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome</string>
    <string name="sign_in_text">Sign In</string>
    <string name="korem_ipsum_text">Korem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="email_text">Email</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="password_text">Password</string>
    <string name="Forget_password">Forget Password</string>
    <string name="or_text">OR</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account_text">Create New Account</string>
    <string name="full_name_text">Full Name</string>
    <string name="full_name_hint">Enter Your Full Name</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="mobile_number_hint">Enter your Phone Number</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="have_account">Have account?</string>
    <string name="all_doctors">All Doctors</string>
    <string name="search_a_doctor_hint">Search a Doctor</string>
    <string name="book_text">Book</string>
    <string name="appointment">Appointment</string>
    <string name="Payment_title">Payment</string>
    <string name="working_hours_title">Working Hours</string>
    <string name="date_title">Date</string>
    <string name="book_an_appointment_text">Book an Appointment</string>
    <string name="see_all">See All</string>
    <string name="_10_00_am">10.00 AM</string>
    <string name="_11_00_am">11.00 AM</string>
    <string name="_12_00_pm">12.00 PM</string>
    <string name="sun_4">Sun 4</string>
    <string name="mon_5">Mon 5</string>
    <string name="tus_6">Tus 6</string>
    <string name="payment_method_text">Doctor Chanaling Payment Method</string>
    <string name="card_payment_text">Card Payment</string>
    <string name="cash_payment_text">Cash Payment</string>
    <string name="card_number_text">Card Number</string>
    <string name="card_number_hint">1234 8896 1145 0896</string>
    <string name="expiry_date_text">Expiry Date</string>
    <string name="cvv_text">CVV</string>
    <string name="cvv_hint">204</string>
    <string name="expiry_date_hint">10/02/2022</string>
    <string name="name_text">Name</string>
    <string name="card_name_hint">Ravishka Sathsara</string>
    <string name="pay_now_text">Pay Now</string>
    <string name="congratulations_text">Congratulations</string>
    <string name="payment_success_text">Your Payment Is Successfully</string>
    <string name="back_text">Back</string>
    <string name="details_text">Details</string>
    <string name="profile_text">Profile</string>
    <string name="history_text">History</string>
    <string name="personal_details_text">Personal Details</string>
    <string name="location_text">Location</string>
    <string name="settings_text">Settings</string>
    <string name="help_text">Help</string>
    <string name="logout_text">Logout</string>
    <string name="john_doe_william">John Doe William</string>
    <string name="hi_welcome_back_text">Hi,Welcome Back,</string>
    <string name="medical_center_text">Medical Center</string>
    <string name="home_card_text_description">Yorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="viewpagertext1">Yorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="viewpagertext2">" Sit fusce ligula diam Neque vel volutpat.Vel. Facilisi aenean."</string>
    <string name="viewpagertext3">Cum diam dignissim tortorFringilla pretium nunc.Suscipit id tortor.</string>
    <string name="viewpagertext4">Yorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="categories_text">Categories</string>
    <string name="denteeth_text">Denteeth</string>
    <string name="therapist_text">Therapist</string>
    <string name="dr_pawan">Dr. Pawan</string>
    <string name="price">$120.00</string>
    <string name="jorem_ipsum">Jorem ipsum dolor, consectetur adipiscing elit. Nunc v libero et velit interdum, ac mattis.</string>
    <string name="notification_title">Notification</string>
    <string name="new_text">New</string>
    <string name="mark_all_text">Mark All</string>
    <string name="message_title">Message</string>
    <string name="active_now_text">Active Now</string>
    <string name="messages_text">Messages</string>
    <string name="worem_epsom">Worem consectetur adipiscing elit.</string>
    <string name="write_hire_hint">Write hire</string>

</resources>