<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".auth.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/text_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/sign_in_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/open_sans"
            android:text="@string/korem_ipsum_text"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/lorem_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/email_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/rounded_input"
            android:fontFamily="@font/open_sans"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/color_gray"
            android:textSize="@dimen/text_small"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/password_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/rounded_input"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/color_gray"
            android:textSize="@dimen/text_small"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/Forget_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/open_sans_bold"
            android:paddingVertical="10dp"
            android:text="@string/sign_in_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:cornerRadius="@dimen/button_corner"


            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/or_text"
            android:textAlignment="center"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/text_medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_facebook"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:scaleType="fitCenter"
                android:src="@drawable/inset_facebook"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.CircularBorder"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_google"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_large"

                android:scaleType="fitCenter"
                android:src="@drawable/inset_google"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.CircularBorder"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_large"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/don_t_have_an_account"

                android:textColor="@color/color_gray" />

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_small_margin"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/sign_up_text"
                android:textColor="@color/color_primary" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>
