<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingTop="@dimen/page_title_margin_top"
    tools:context=".ui.main.notification.NotificationFragment">

    <ImageView
        android:id="@+id/back_vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_vector_back"
        app:layout_constraintBottom_toBottomOf="@id/page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/notification_title"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_text"
        android:textSize="@dimen/new_text_size"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_marginTop="@dimen/new_notification_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title"

        />

    <TextView
        android:id="@+id/mark_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_all_text"
        android:textSize="@dimen/mark_all_size"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintBottom_toBottomOf="@id/new_notification"
        />
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/new_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notification_recycler_view"
        tools:itemCount="6"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <TextView
        android:id="@+id/see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textSize="@dimen/text_medium"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/new_notification_margin_top"

        />



</androidx.constraintlayout.widget.ConstraintLayout>
